Modif feuille de style
Ajout du middle-name

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*!
 Theme Name: gitkrakeun
 Theme URI: http://underscores.me/
-Author: Underscores.me
+Author: Ouli
 Author URI: http://underscores.me/
 Description: Description
 Version: 1.0.0
